--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="welcome">Welcome to BookCave</string>
     <!--Log in-->
     <string name="login">Log In</string>
+    <string name="log_out">Log Out</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="forget_pass">Forget Password?</string>
@@ -12,10 +13,21 @@
     <string name="have_account">Already have account?Log in.</string>
     <string name="reset_pass">Reset Password</string>
     <string name="receive_link">Receive link in email</string>
+    <!--Home page-->
     <string name="title_activity_home_customer">HomeCustomer</string>
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_profile">Profile</string>
+    <!--Profile-->
+    <string name="name">My name</string>
+    <string name="profile">My Profile</string>
+    <string name="favourites">Favourites</string>
+    <string name="my_cart">My Cart</string>
+    <string name="order_history">Order History</string>
+    <string name="payment_history">Payment History</string>
+    <string name="help">Help</string>
+    <string name="contact_dev">Contact Developer</string>
+    <string name="about">About our app</string>
     <!-- PLEASE IGNORE THIS LINE <string name="personal_github_token_iatharva">be8d3bcd68fd03ad0f9763efa7a110427caccae1</string>-->
 </resources>
