--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,15 +57,27 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_subtitle">Successfully signed in</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_addbook">Add Books</string>
+    <string name="menu_removebooks">Remove Books</string>
 
     <string name="home_second">Home Second</string>
+    <string name="menu_booklist">Books List</string>
+    <string name="menu_info">My information</string>
+    <string name="menu_profile">My profile</string>
+    <string name="menu_options">Others</string>
+    <string name="menu_setting">Settings</string>
+    <string name="menu_feedback">Report a problem</string>
+    <string name="menu_about">About our app</string>
+    <string name="menu_history">Order history</string>
+    <string name="menu_current_order">Current orders</string>
+    <string name="user">User</string>
 
     <!-- PLEASE IGNORE THIS LINE <string name="personal_github_token_iatharva">be8d3bcd68fd03ad0f9763efa7a110427caccae1</string>-->
 </resources>
