--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,10 +94,30 @@
     <string name="urprice">Your selling price</string>
     <string name="rentprice">Renting price</string>
     <string name="delicharges">Delivery charges</string>
-
+    <!--SEARCH BOOK-->
     <string name="search_ph">Search Books by name,author</string>
+    <!--VIEW BOOK-->
     <string name="buybook">Buy Book</string>
     <string name="rentbook">Rent Book</string>
     <string name="read_preview">Read Book preview</string>
     <string name="conti">Continue</string>
+    <string name="placeorder">Place Order</string>
+    <string name="pinfo">You will have to pay the money and other document(if required) on delivery. You can pay in cash or UPI, card or any other online mode too.</string>
+    <string name="addadd">Enter new address</string>
+    <string name="order_summary">Order Summary</string>
+    <string name="change_address_for_this_order">Change Address for this order</string>
+    <string name="book_image">Book Image</string>
+    <string name="authname">Author Name</string>
+    <string name="genre">Genre</string>
+    <string name="price_details">Price details</string>
+    <string name="price_1_item">Price(1 item)</string>
+    <string name="delivery_charges">Delivery charges</string>
+    <string name="total_amount">Total amount</string>
+    <string name="payment_details">Payment details</string>
+    <string name="cash_on_delivery">Cash on delivery</string>
+    <string name="final_amount_to_pay">Final amount to pay</string>
+    <string name="use_this_address_for_this_order">Use this Address for this order</string>
+    <string name="go_to_home">Go to Home</string>
+    <string name="order_placed">Order placed!</string>
+
 </resources>
